# global_lake_adft

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: adapter.yaml  tables.yaml  viz.yaml
config/algorithms/: comparison.yaml  entropy.yaml  eot.yaml  hawkes.yaml  interpolation.yaml  pwm_extreme.yaml  quality.yaml  quantile.yaml
docs/: algorithm.md  batch-framework-refactor-memo.md  change_point_detect.md  figure_inventory.csv  figure_inventory_target.csv  lake_dataset_refactor_checklist.md  lakesource-sql-refactor-notes.md  memo_cli_refactor_plan.md  memo_engine_provider_refactor.md  memo_export_rerun.md  memo_h_cv.md  memo_pwm_event_and_hawkes_plan.md  memo_pwm_hawkes_decay_algorithm.md  memo_smoke_test_refactor.md  memo_sync_command.md  output_directory_inventory.csv  output_directory_inventory_target.csv  pettitt.md  pwm_evt_重构清单.md  quality-filter-refactor-memo.md  refactor-implementation-memo.md  script_inventory.csv  script_inventory_target.csv
docs/architecture/: batch-framework.md  hydrofetch-system-overview.md  package-boundaries.md  repository-layout.md
docs/memo/: hawkes-refactor-memo.md  mpi-parquet-worker-slice-refactor.md  shift_filter_implementation.md
docs/migration/: REFACTOR_BLUEPRINT.md  from-legacy-repos.md  geeconnect-to-hydrofetch.md
docs/research/: EOT_Hawkes_隐函数贝叶斯同化数学方案.md  EOT模块算法说明.md  EOT模块说明.md  EntropyCalculation.md  Global_dominance_of_seasonality_in_shaping_lake-surface-extent_dynamics_content.md  Introductiontostatisticalmodelingof extremevalues.md  README.md  artificial模块说明.md  hawkes-report.md  pfaf模块说明.md  双频同化方案.md  (+7 more)
lsf/: cmp_grid_agg_tcb.sh  cmp_sample_tcb.sh  comparison_tcb.sh  tcb_cmp_test.sh
scripts/: README.md  manage.sh  rsync_hpc.sh  smoke_mpi_common.sh  smoke_mpi_eot.sh  smoke_mpi_pwm.sh  smoke_mpi_quantile.sh  start_dashboard.sh
(+6 files in other folders)
