[project]
name = "global-lake-adft-workspace"
version = "0.1.0"
description = "Workspace for lakeanalysis"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/lakeanalysis",
    "packages/lakesource",
    "packages/lakeviz",
]

[tool.uv.sources]
lakeanalysis = { workspace = true }
lakesource = { workspace = true }
lakeviz = { workspace = true }

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
