[project]
name = "global-lake-adft-workspace"
version = "0.1.0"
description = "Workspace for lakeanalysis"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/lakeanalysis",
    "packages/lakesource",
    "packages/lakeviz",
]

[tool.uv.sources]
lakeanalysis = { workspace = true }
lakesource = { workspace = true }
lakeviz = { workspace = true }

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version",
    "packages/lakesource/pyproject.toml:^version",
    "packages/lakeanalysis/pyproject.toml:^version",
    "packages/lakeviz/pyproject.toml:^version",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
